docs(manual): v3.5.1 -> v3.5.2 の差分について記述

--- a/packages/assets/html/manual.html
+++ b/packages/assets/html/manual.html
@@ -139,7 +139,7 @@
             <section>
                 <h2>更新情報</h2>
                 <section>
-                    <h3>v3.4.2からv3.5.1への変更点</h3>
+                    <h3>v3.4.2からv3.5.2への変更点</h3>
                     <ul>
                         <li>オートセーブ機能追加: 200歩ごとにオートセーブされます。Quick Loadでロードできます。</li>
                         <li><code>data-wwa-autosave</code>属性追加。オートセーブの無効化や歩数の変更ができます。</li>
@@ -148,6 +148,7 @@
                         <li>セーブ禁止時に Quick Save ボタン名を表示しない対応</li>
                         <li>パスワードセーブが大幅に短くなる</li>
                         <li>物体パーツを差分描画にすることにより描画を高速化</li>
+                        <li>v3.5.1 において, スタンダードマップの説明が一部誤っていましたので修正しました。現状では、Quick Saveした後にマップデータが改変された場合、セーブデータは無効となるのが正しいです。この仕様は今後変更になる可能性があります。</li>
                     </ul>
                     <h3>v3.4.1からv3.4.2への変更点</h3>
                     <ul>
