docs(manual): パレットの件も追記した

--- a/packages/assets/html/manual.html
+++ b/packages/assets/html/manual.html
@@ -141,7 +141,8 @@
                 <section>
                     <h3>v3.5.2からv3.5.3への変更点</h3>
                     <ul>
-                        <li>オートセーブ無効指定 <code>data-wwa-autosave="0"</code> が効いていなかったのを修正。</li>
+                        <li>付属している画像のパレットが変だったのを修正</li>
+                        <li>オートセーブ無効指定 <code>data-wwa-autosave="0"</code> が効いていなかったのを修正</li>
                     </ul>
                     <h3>v3.4.2からv3.5.2への変更点</h3>
                     <ul>
