docs(manual): v3.5.4での差分を追記

--- a/packages/assets/html/manual.html
+++ b/packages/assets/html/manual.html
@@ -139,6 +139,10 @@
             <section>
                 <h2>更新情報</h2>
                 <section>
+                    <h3>v3.5.3からv3.5.4への変更点</h3>
+                    <ul>
+                        <li>プレイヤー追尾・逃げる属性の挙動を WWA v3.10 未満と揃えるマクロ <code>$oldmove</code> を追加。<code>$oldmove=1</code>で古い動き方になり、<code>$oldmove=0</code>で新しい方の動き方になります。</li>
+                    </ul>
                     <h3>v3.5.2からv3.5.3への変更点</h3>
                     <ul>
                         <li>付属している画像のパレットが変だったのを修正</li>
