docs(manual): マニュアル更新

--- a/packages/assets/html/manual.html
+++ b/packages/assets/html/manual.html
@@ -139,6 +139,10 @@
             <section>
                 <h2>更新情報</h2>
                 <section>
+                    <h3>v3.5.4からv3.5.5への変更点</h3>
+                    <ul>
+                        <li>アイテム取得と消費がほぼ同時に行われた場合に、アイテムボックスに見かけ上、アイテムが消費されていないかのように見える不具合を修正。</li>
+                    </ul>
                     <h3>v3.5.3からv3.5.4への変更点</h3>
                     <ul>
                         <li>プレイヤー追尾・逃げる属性の挙動を WWA v3.10 未満と揃えるマクロ <code>$oldmove</code> を追加。<code>$oldmove=1</code>で古い動き方になり、<code>$oldmove=0</code>で新しい方の動き方になります。</li>
