fix(assets): スタンダードマップの通り道をスライムが塞いでいたのを修正

--- a/packages/assets/html/manual.html
+++ b/packages/assets/html/manual.html
@@ -139,6 +139,10 @@
             <section>
                 <h2>更新情報</h2>
                 <section>
+                    <h3>v3.5.5からv3.5.6への変更点</h3>
+                    <ul>
+                        <li>同梱しているスタンダードマップの通り道を、スライムが塞いでいたので削除。(WWA Wing 本体の変更はありません)</li>
+                    </ul>
                     <h3>v3.5.4からv3.5.5への変更点</h3>
                     <ul>
                         <li>アイテム取得と消費がほぼ同時に行われた場合に、アイテムボックスに見かけ上、アイテムが消費されていないかのように見える不具合を修正。</li>
