docs(manual): セーブデータの互換性についてマニュアルに追記

--- a/packages/assets/html/manual.html
+++ b/packages/assets/html/manual.html
@@ -142,6 +142,8 @@
                 <h2>更新情報</h2>
                 <section>
                     <h3>v3.5.6からv3.5.7への変更点</h3>
+                    <p class="important">セーブデータ(Quick Save/パスワード)の互換性: v3.5.1～v3.5.6 からアップデートしてもセーブデータは引き続きロードできます。</p>
+                    <p class="important">ただし、上記のアップデートと同時にマップデータを改変した場合はセーブデータが無効となります。(Quick Saveは、無効となったセーブデータをロードしようとすると削除されます。)</p>
                     <ul>
                         <li>セーブデータが無効になる条件を「マップデータが変更された時」から「『タイトル』『暗証番号』のいずれかが変更された時」に変更</li>
                         <li>セーブデータが無効になる条件を v3.5.6 以前と同じにする<code>data-wwa-disallow-load-old-save</code>属性を追加</li>
