docs(manual): v3.5.11向けマニュアル更新

--- a/packages/assets/html/manual.html
+++ b/packages/assets/html/manual.html
@@ -154,6 +154,11 @@
             <section>
                 <h2>更新情報</h2>
                 <section>
+                    <h3>v3.5.10からv3.5.11への変更点</h3>
+                    <p class="information">セーブデータの互換性: v3.5.1～v3.5.10 からアップデートしても、Quick Save / パスワード は引き続きロードできます。</p>
+                    <ul>
+                        <li>Internet Explorer 11で、画面を閉じたりページを移動したりした場合にセーブデータが失われる不具合を修正</li>
+                    </ul>
                     <h3>v3.5.8からv3.5.10への変更点</h3>
                     <p class="information">セーブデータの互換性: v3.5.1～v3.5.8 からアップデートしても、Quick Save / パスワード は引き続きロードできます。</p>
                     <ul>
