docs(manual): マニュアル更新

--- a/packages/assets/html/manual.html
+++ b/packages/assets/html/manual.html
@@ -154,19 +154,21 @@
             <section>
                 <h2>更新情報</h2>
                 <section>
+                    <h3>v3.5.11からv3.5.12への変更点</h3>
+                    <p class="information">セーブデータの互換性: v3.5.1～v3.5.11 からアップデートしても、Quick Save / パスワード は引き続きロードできます。</p>
+                    <ul>
+                        <li>(利用あされる分には何も変化ございません) WWA Wingのリリース時に使うプログラムをWWA Wing本体から除外</li>
+                    </ul>
                     <h3>v3.5.10からv3.5.11への変更点</h3>
-                    <p class="information">セーブデータの互換性: v3.5.1～v3.5.10 からアップデートしても、Quick Save / パスワード は引き続きロードできます。</p>
                     <ul>
                         <li>Internet Explorer 11で、画面を閉じたりページを移動したりした場合にセーブデータが失われる不具合を修正</li>
                     </ul>
                     <h3>v3.5.8からv3.5.10への変更点</h3>
-                    <p class="information">セーブデータの互換性: v3.5.1～v3.5.8 からアップデートしても、Quick Save / パスワード は引き続きロードできます。</p>
                     <ul>
                         <li>(利用される分には何も変化ございません) <code>wwa-server.exe</code> で利用している Node.js のバージョンを更新</li>
                         <li>(開発者向け) WWALoader などの npm パッケージで CommonJS と ESModules の両方を利用できるように変更</li>
                     </ul>
                     <h3>v3.5.7からv3.5.8への変更点</h3>
-                    <p class="information">セーブデータの互換性: v3.5.1～v3.5.7 からアップデートしても、Quick Save / パスワード は引き続きロードできます。</p>
                     <ul>
                         <li>パスワードロードの画面で、パスワードを受け付ける条件の文言が間違っていたので修正</li>
                     </ul>
